Fixed header user info User gravatar and name shows now properly Issue: User gravatar and name was displayed in different lines. Also right navbar has been partialy out of screen. Solution: Fixed CSS styles Note: ---

--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -308,7 +308,26 @@ p {
     text-decoration: none;
   }
 }
+.navbar-right {
+  padding-right: 15px;
+  margin-right: 15px;
+}
 
+.user-basic-data{
+  width: 100%;
+  height: 20px;
+  padding-top: 10px;
+  padding-left: 5px;
+  margin-left: 10%;
+  display: inline-block;
+  h4{
+    color: #af1923;
+    font-size: 1.1em;
+    font-family: "Source Code Pro", Monaco, monospace;
+    font-weight: bold;
+    display: inline-block;
+  }
+}
 /*
 #logo:hover {
   color: #666666;
@@ -430,15 +449,3 @@ footer ul {
   }
 }
 
-.user-basic-data{
-  width: 20%;
-  height: 15px;
-  padding-top: 5px;
-  padding-left: 10px;
-  h4{
-    color: #af1923;
-    font-size: 1.1em;
-    font-family: "Source Code Pro", Monaco, monospace;
-    font-weight: bold;
-  }
-}
